--- a/server/MomantzaApp.csproj
+++ b/server/MomantzaApp.csproj
@@ -45,4 +45,8 @@
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="model\NewFolder\" />
+  </ItemGroup>
+
 </Project>
