--- a/webui/env.example
+++ b/webui/env.example
@@ -1,3 +1,10 @@
+# Base URL Configuration (e.g., '/webui' or '/app' - leave empty for root)
+# This is the path where the app will be served (must start with / or be empty)
+VITE_BASE_URL=
+
+# Server Port (default: 8080)
+VITE_PORT=8080
+
 # API Configuration
 VITE_API_BASE_URL=http://localhost:5000
 
