--- a/webui/env.production.example
+++ b/webui/env.production.example
@@ -1,4 +1,11 @@
 # Production Environment
-VITE_API_BASE_URL=http://localhost:5212
+# Base URL Configuration (e.g., '/webui' or '/app' - leave empty for root)
+VITE_BASE_URL=
+
+# Server Port (default: 8080)
+VITE_PORT=8080
+
+# API Configuration
+VITE_API_BASE_URL=http://localhost:5000
 NODE_ENV=production
 VITE_APP_TITLE=Wedding Hub Manager 
