--- a/webui/env.development.example
+++ b/webui/env.development.example
@@ -1,4 +1,11 @@
 # Development Environment
+# Base URL Configuration (e.g., '/webui' or '/app' - leave empty for root)
+VITE_BASE_URL=
+
+# Server Port (default: 8080)
+VITE_PORT=8080
+
+# API Configuration
 VITE_API_BASE_URL=http://localhost:5000
 NODE_ENV=development
 VITE_APP_TITLE=Wedding Hub Manager (Dev) 
