--- a/momentzabuild/wwwroot/config.json
+++ b/momentzabuild/wwwroot/config.json
@@ -1,5 +1,5 @@
 {
-  "VITE_API_BASE_URL": "https://momentza.com",
+  "VITE_API_BASE_URL": "/api",
   "VITE_APP_TITLE": "Wedding Hub Manager",
   "VITE_APP_VERSION": "1.0.0",
   "VITE_ENVIRONMENT": "production",
