--- a/webui/env.development.example
+++ b/webui/env.development.example
@@ -6,6 +6,6 @@ VITE_BASE_URL=
 VITE_PORT=8080
 
 # API Configuration
-VITE_API_BASE_URL=https://momentza.com
+VITE_API_BASE_URL=http://localhost:5000
 NODE_ENV=development
 VITE_APP_TITLE=Wedding Hub Manager (Dev) 
