--- a/webui/env.example
+++ b/webui/env.example
@@ -6,7 +6,7 @@ VITE_BASE_URL=
 VITE_PORT=8080
 
 # API Configuration
-VITE_API_BASE_URL=https://momentza.com
+VITE_API_BASE_URL=http://localhost:5000
 
 # Environment
 NODE_ENV=development
