--- a/webui/public/config.json
+++ b/webui/public/config.json
@@ -1,7 +1,7 @@
 {
   "VITE_BASE_URL": "",
   "VITE_PORT": 8082,
-  "VITE_API_BASE_URL": "https://momentza.com",
+  "VITE_API_BASE_URL": "",
   "VITE_APP_TITLE": "Wedding Hub Manager",
   "VITE_APP_VERSION": "1.0.0",
   "VITE_ENVIRONMENT": "production"
